<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>core-java-17</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>core-java-17</name>
    <packaging>jar</packaging>
    <url>http://maven.apache.org</url>

    <parent>
        <groupId>com.baeldung</groupId>
        <artifactId>parent-modules</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../../</relativePath>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>${maven.compiler.source.version}</source>
                    <target>${maven.compiler.target.version}</target>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
				<configuration>
					<argLine>--enable-preview</argLine>
					<forkCount>1</forkCount>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-api</artifactId>
						<version>${surefire.plugin.version}</version>
					</dependency>
				</dependencies>
			</plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source.version>17</maven.compiler.source.version>
        <maven.compiler.target.version>17</maven.compiler.target.version>
		<maven.compiler.release>17</maven.compiler.release>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
		<assertj.version>3.17.2</assertj.version>
    </properties>

</project>